--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
-Changes in version 1.2.2 (2020-09-29)
+Changes in version 1.5.2 (2020-11-22)
++ Fix bedpe output for Juicebox
+Changes in version 1.5.1 (2020-09-29)
 + Make 'dplyr::lag' explicit in 'SpectralTAD'
 + Make 'window_size' explicit in 'SpectralTAD_Par', 'bplapply'
 + Track NEWS
