--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.11.1 (2023-01-07)
++ Change example for SpectralTAD_Par(mat_list, chr= chr, labels = labels, cores = 2)
++ Update authors, make DESCRIPTION current
 Changes in version 1.11.0 (2022-04-21)
 + Match NEWS and DESCRIPTION versioning
 Changes in version 1.7.1 (2020-11-22)
