--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.15.2 (2023-02-01)
++ Major code update due to breaking changes in the dependencies. Current results
+  are a subset of results obtained prior to it.
 Changes in version 1.15.1 (2023-01-07)
 + Change example for SpectralTAD_Par(mat_list, chr= chr, labels = labels, cores = 2)
 + Update authors, make DESCRIPTION current
