--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.15.2 (2023-03-07)
++ SpectralTAD fixed by Kellen: "There was something in the code designed to expand the window if no TADs were detected but it was not working properly. No idea why it just started now."
++ Change example for SpectralTAD_Par(mat_list, chr= chr, labels = labels, cores = 2)
 Changes in version 1.11.0 (2022-04-21)
 + Match NEWS and DESCRIPTION versioning
 Changes in version 1.7.1 (2020-11-22)
